initial librakyle's blog.

--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,4 +1,4 @@
 <section>
   <h1>About Me</h1>
-  <p>A little something about me.</p>
+  <ul><li>Email: <a href="mailto:{{site.email}}">{{site.email}} </a></ul></li>
 </section>
